update: use custom name for Open API Schema & generate open api
