# api/handler/user/dto.go
@@ -3,9 +3,9 @@ package userhandler
 type UserDto struct {
 	Id       string `json:"id,omitempty"`
 	Username string `json:"username,omitempty"`
-}
+} // @name UserDto
 
 type CreateUserRequest struct {
 	Username string `json:"username"`
-	IdToken  string `json:"id_token"`
-}
+	IdToken  string `json:"idToken"`
+} // @name CreateUserRequest
