# docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/user": {
+        "/users": {
             "post": {
                 "security": [
                     {
@@ -25,23 +25,15 @@
                     "user"
                 ],
                 "summary": "Create new user",
+                "operationId": "CreateUser",
                 "parameters": [
                     {
-                        "description": "idToken",
-                        "name": "idToken",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
                         "description": "username",
-                        "name": "username",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/CreateUserRequest"
                         }
                     }
                 ],
@@ -49,7 +41,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userhandler.UserDto"
+                            "$ref": "#/definitions/UserDto"
                         }
                     }
                 }
@@ -57,7 +49,18 @@
         }
     },
     "definitions": {
-        "userhandler.UserDto": {
+        "CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "idToken": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "UserDto": {
             "type": "object",
             "properties": {
                 "id": {
